Fix flex-container overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
     margin:0;
     gap: 40px;
     box-sizing: border-box;
+    /* Added this so flex containers do not overflow (largest element that does not shrink is img (500px) */
+   /* See if theres a more proper way of doing this - without a hardcoded value */
+    min-width: 500px;
 }
 body > div{
     padding: 0 10%;
@@ -18,8 +21,6 @@ body > div{
 /* ------------Header Nav Section-------------------- */
 .header{
     background-color: #1F2937;
-    /* consider adding this to all direct div childs of body */
-    min-width: min-content; 
 }
 
 .header .nav{
@@ -36,18 +37,13 @@ body > div{
     padding:0;
     gap: 10px;
     list-style: none;
-    flex-wrap: nowrap;
-    min-width: max-content;
 }
 
-
-.header .header-links li{
-   
-}
 .header-links a{
     text-decoration: none;
     font-size: 18px; 
     color: #E5E7EB;
+    overflow-wrap: break-word;
 }
 
 .header .logo{
